Polish contribution
See gh-35817

(cherry picked from commit 09a8bbc0c7113b09bca26c6ede44fb1b26c73d9b)